--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "decision-unblocker",
   "version": "1.0.0",
   "dependencies": {
+    "express": "^5.2.1",
     "node-fetch": "^2.6.7"
   }
 }
